--- a/cloud-lab/roles/osp-facts/tasks/main.yml
+++ b/cloud-lab/roles/osp-facts/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for roles/osp-facts
 - name: Fetch Instance Info
   os_server_facts:
-   cloud: ospcloud
+   cloud: "{{ cloud_name }}"
    region_name: RegionOne
   register: result
 
