--- a/cloud-lab/roles/osp-keypair/tasks/main.yml
+++ b/cloud-lab/roles/osp-keypair/tasks/main.yml
@@ -6,7 +6,7 @@
     generate_ssh_key: yes
     ssh_key_file: .ssh/test_id_rsa
 - os_keypair:
-    cloud: ospcloud
+    cloud: "{{ cloud_name }}"
     state: present
     name: ansible_ssh_key
     public_key_file: "{{ ansible_env.HOME }}/.ssh/test_id_rsa.pub"
