--- a/cloud-lab/cleanup-infra.yml
+++ b/cloud-lab/cleanup-infra.yml
@@ -1,21 +1,27 @@
 ---
-- name: Provision openstack networks
+- name: Clean up OpenStack infrastructure
   hosts: jumpbox
   gather_facts: true
   vars_files:
     - vars/vars.yml
-  roles:
-    - osp-network
-    - osp-keypair
-    - osp-flavor
-    - osp-securitygroup
   tasks:
-    - name: Create all VMs
+    - name: Delete all VMs
       include_role:
-        name: osp-vm
+        name: del-osp-vm
       with_items: "{{ vm_info }}"
 
-## Alternate Method to create dynmaic inventory
-    - name: Gather facts
+    - name: Delete all security-groups
       include_role:
-        name: osp-facts
+        name: del-osp-securitygroup
+
+    - name: Delete all flavors
+      include_role:
+        name: del-osp-flavor
+
+    - name: Delete all key pairs
+      include_role:
+        name: del-osp-keypair
+
+    - name: Delete all networks
+      include_role:
+        name: del-osp-network
