--- a/cloud-lab/deploy-infra.yml
+++ b/cloud-lab/deploy-infra.yml
@@ -1,28 +1,17 @@
 ---
-- name: Delete infrastructure VMs on OpenStack
+- name: Deploy infrastructure VMs on OpenStack
   hosts: all
   gather_facts: true
   vars_files:
     - vars/vars.yml
+  roles:
+    - osp-flavor
+    - osp-keypair
+    - osp-network
+    - osp-securitygroup
   tasks:
-    - name: Delete all VMs
+    - name: Create all VMs
       include_role:
         name: osp-vm
       with_items: "{{ vm_info }}"
-
-    - name: Delete all security groups
-      include_role:
-        name: del-osp-securitygroup
-
-    - name: Delete all flavors
-      include_role:
-        name: del-osp-flavor
-
-    - name: Delete all keypairs
-      include_role:
-        name: del-osp-keypair
-
-    - name: Delete all networks
-      include_role:
-        name: del-osp-network
 
