Changed role path

--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -6,7 +6,7 @@
   hosts: jumpbox
   gather_facts: true
   roles:
-    - name: osp-facts
+    - name: ../cloud-lab/roles/osp-facts
 
 - name: Enable repos
   hosts: frontends, apps, appsdb
