--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -5,6 +5,8 @@
 - name: Deploy a 3-tier app
   hosts: all
   gather_facts: true
+  vars_files:
+    - ../cloud-lab/vars/vars.yml
   roles:
     - name: ../cloud-lab/roles/osp-facts
 
