--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -60,17 +60,20 @@
   gather_facts: no
   become: no
   tasks:
+    - name: Wait for services to start
+      wait_for:
+        timeout: 30
+      delegate_to: localhost
+
     - name: print debug
       debug:
         var: "{{ inventory_hostname }}"
-      tags: p1
 
     - name: Get web page content
       uri:
         url: "http://{{ inventory_hostname }}"
         return_content: yes
       register: webpage
-      tags: p1
 
     - name: print debug
       debug:
@@ -79,5 +82,4 @@
     - name: Fail if "Welcome to Tomcat" not in the returned content
       fail:
       when: "'Welcome to Tomcat' not in webpage.content"
-      tags: p1
 
