--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -6,9 +6,9 @@
   hosts: all
   gather_facts: true
   vars_files:
-    - ../cloud-lab/vars/vars.yml
+    - vars/vms.yml
   roles:
-    - name: ../cloud-lab/roles/osp-facts
+    - name: osp-facts
   tasks:
     - name: Delete ".ssh/known_hosts" file on workstation
       file:
