--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -8,7 +8,7 @@
   vars_files:
     - vars/vms.yml
   roles:
-    - name: osp-facts
+    - osp-facts
   tasks:
     - name: Delete ".ssh/known_hosts" file on workstation
       file:
