--- a/3-tier-lab/Configure_3TA_AWS.yml
+++ b/3-tier-lab/Configure_3TA_AWS.yml
@@ -1,20 +1,45 @@
 ---
-- name: Wait for AWS infra to be available
-  hosts: frontends, apps, appsdb
+- name: Get ssh keys to connect to the new AWS env
+  hosts: bastion
   gather_facts: False
+  become: true
+  remote_user: "{{ user_name }}"
+  vars_files:
+    - vars/vars.yml
   tasks:
-    wait_for:
-      host: "{{ inventory_hostname }}"
-      port: 22
-      state: started
-      delay: 30
-      timeout: 900
-      sleep: 30
-    delegate_to: localhost
+    - name: Wait for AWS infra to be available
+      wait_for:
+        host: "{{ inventory_hostname }}"
+        port: 22
+        state: started
+        delay: 30
+        timeout: 900
+        sleep: 30
+      delegate_to: localhost
+
+    - name: Identify pem file location
+      find:
+        path: /root/.ssh/
+        pattern: '*.pem'
+      register: result
+
+    - name: save pem file to local directory
+      fetch:
+        src: "{{ result.files[0].path }}"
+        dest: "/tmp/awskey.pem"
+        flat: true
+
+    - name: fix permissions of key file
+      become: false
+      file:
+        path: /tmp/awskey.pem
+        mode: 0400
+      delegate_to: localhost
 
 - name: Enable repos for 3-tier app
   hosts: frontends, apps, appsdb
   gather_facts: False
+  remote_user: ec2-user
   vars_files:
     - vars/vars.yml
   tasks:
@@ -28,6 +53,7 @@
   hosts: frontends
   gather_facts: False
   become: yes
+  remote_user: ec2-user
   roles:
     - name: haproxy
 
@@ -35,6 +61,7 @@
   hosts: apps
   gather_facts: False
   become: yes
+  remote_user: ec2-user
   roles:
     - name: tomcat
 
@@ -42,6 +69,7 @@
   hosts: appsdb
   gather_facts: True
   become: yes
+  remote_user: ec2-user
   roles:
     - name: postgres
 
@@ -49,6 +77,7 @@
   hosts: apps
   gather_facts: False
   become: yes
+  remote_user: ec2-user
   roles:
     - name: apache
 
@@ -56,6 +85,7 @@
   hosts: frontends
   gather_facts: no
   become: no
+  remote_user: ec2-user
   tasks:
     - name: Wait for services to start
       wait_for:
