--- a/3-tier-lab/Configure_3TA_AWS.yml
+++ b/3-tier-lab/Configure_3TA_AWS.yml
@@ -1,13 +1,10 @@
 ---
-- name: Get ssh keys to connect to the new AWS env
+- name: Wait for AWS infra to be available
   hosts: bastion
   gather_facts: False
-  become: true
-  remote_user: "{{ user_name }}"
-  vars_files:
-    - vars/vars.yml
+  become: False
   tasks:
-    - name: Wait for AWS infra to be available
+    - name: Wait for bastion server
       wait_for:
         host: "{{ inventory_hostname }}"
         port: 22
@@ -17,6 +14,14 @@
         sleep: 30
       delegate_to: localhost
 
+- name: Get ssh keys to connect to the new AWS env
+  hosts: bastion
+  gather_facts: False
+  become: true
+  remote_user: "{{ user_name }}"
+  vars_files:
+    - vars/vars.yml
+  tasks:
     - name: Identify pem file location
       find:
         path: /root/.ssh/
