--- a/3-tier-lab/gather_AWS_facts.yml
+++ b/3-tier-lab/gather_AWS_facts.yml
@@ -1,7 +1,8 @@
 ---
 - name: Gather AWS facts
   hosts: localhost
-  gather_facts: no
-  connection: local
-  roles:
-    - aws-facts
+  gather_facts: false
+  tasks:
+    - include_role:
+        name: aws-facts
+      connection: local
