--- a/d1.yml
+++ b/d1.yml
@@ -4,6 +4,6 @@
   tasks:
     - name: Delete ".ssh/known_hosts" file on workstation
       file:
-        path: ~/.ssh/known_hosts
+        path: /var/lib/awx/.ssh/known_hosts
         state: absent
 
