--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -16,6 +16,11 @@
         path: /var/lib/awx/.ssh/known_hosts
         state: absent
 
+    - name: Wait for the VMs to initialize in the OpenStack environment
+      wait_for:
+        timeout: 60
+      delegate_to: localhost
+
 - name: Enable repos
   hosts: frontends, apps, appsdb
   gather_facts: False
