--- a/3-tier-lab/roles/aws-facts/tasks/main.yml
+++ b/3-tier-lab/roles/aws-facts/tasks/main.yml
@@ -16,5 +16,7 @@
    name: "{{ item.public_ip_address }}"
    group:
      - "{{ item.tags.AnsibleGroup }}"
+  ansible_host: "{{ item.public_ip_address }}"
+  ansible_ssh_private_key_file: /tmp/awskey.pem
   with_items: "{{result.instances}}"
 
