--- a/3-tier-lab/Configure_3TA_OSP.yml
+++ b/3-tier-lab/Configure_3TA_OSP.yml
@@ -17,6 +17,7 @@
         state: absent
 
     - name: Wait for the VMs to initialize in the OpenStack environment
+      become: false
       wait_for:
         timeout: 60
       delegate_to: localhost
